升级至26.1，去除混淆表